2009-11-21  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Kenneth Rohde Christiansen.

        Link DumpRenderTree to the Qt Ui Tools
        https://bugs.webkit.org/show_bug.cgi?id=31203

        Implement QWebPage::createPlugin using the Qt Ui Tools
        to be able to create classes like QProgressBar from within
        the <object></object> tags This is required for the
        new automatic test of Qt Plugins.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::createPlugin):
        * DumpRenderTree/qt/DumpRenderTree.h:
        * DumpRenderTree/qt/DumpRenderTree.pro:

2009-11-25  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Eric Seidel.

        Update pywebsocket to 0.4.2

        Update pywebsocket to 0.4.2
        https://bugs.webkit.org/show_bug.cgi?id=31861

        * pywebsocket/example/echo_client.py:
        * pywebsocket/example/echo_wsh.py:
        * pywebsocket/mod_pywebsocket/__init__.py:
        * pywebsocket/mod_pywebsocket/dispatch.py:
        * pywebsocket/mod_pywebsocket/msgutil.py:
        * pywebsocket/mod_pywebsocket/standalone.py:
        * pywebsocket/setup.py:
        * pywebsocket/test/test_dispatch.py:
        * pywebsocket/test/test_msgutil.py:

2009-11-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add unit test for mark-fixed
        https://bugs.webkit.org/show_bug.cgi?id=31896

        * Scripts/modules/commands/commandtest.py: Added.
        * Scripts/modules/commands/queries_unittest.py:
        * Scripts/modules/commands/upload_unittest.py: Added.
        * Scripts/modules/mock_bugzillatool.py:
        * Scripts/run-webkit-unittests:

2009-11-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        bugzilla-tool should have a mark-fixed command
        https://bugs.webkit.org/show_bug.cgi?id=31853

        Pretty simple stuff.

        * Scripts/modules/commands/upload.py:

2009-11-25  Eric Seidel  <eric@webkit.org>